@@ -103,6 +103,23 @@ function update(){\n
   $("a#loading_message").append(".");\n
 }\n
 \n
+$.getJSON("Base_getPreferencePathList", function(data){\n
+  preference = data.preference + \'/Preference_viewHtmlStyle?editable_mode:int=1\';\n
+  system_preference = data.system_preference + \'/SystemPreference_view?editable_mode:int=1\';\n
+  if ($("div#preference_dialog").html() == "") {\n
+    $.get(preference, function(data){\n
+      $("div#preference_dialog").append("<fieldset class=\'center editable\'>" + \n
+                                        $(data).find(\'fieldset.center.editable\').html() +\n
+                                        "</fieldset>");\n
+    });\n
+    $.get(system_preference, function(data){\n
+      $("div#preference_dialog").append("<fieldset class=\'right editable\'>" + \n
+                                        $(data).find(\'fieldset.right.editable\').html() +\n
+                                        "</fieldset>");\n
+    });\n
+  }\n
+});\n
+\n
 $(document).ready(function(){\n
   if ($("div.gadget-column").length == 0 && window.location.href.split("?").length > 1) {\n
     parameterList = getUrlParameterList();\n
@@ -111,12 +128,16 @@ $(document).ready(function(){\n
       $("a#loading_message").show();\n
       setTimeout(checkConversion(), 1000);\n
     }\n
-    if (getWebEditorName() == "WebPage_viewEditor" || getWebEditorName() == "WebTable_viewEditor")\n
-     $("div.content").css({"position":"fixed", "bottom": "0px", "left": "0px", "right": "0px"});\n
-    if (getWebEditorName() == "WebPage_viewEditor")\n
-     $("div.content").css({"top": "5em"});\n
-    if (getWebEditorName() == "WebTable_viewEditor")\n
-     $("div.content").css({"top": "6em"});\n
+    switch (getWebEditorName()) {\n
+      case "WebPage_viewEditor":\n
+        $("div.content").css({"position":"fixed", "bottom": "0px", "left": "0px", "right": "0px"});\n
+        $("div.content").css({"top": "5em"});\n
+        break;\n
+      case "WebTable_viewEditor":\n
+        $("div.content").css({"position":"fixed", "bottom": "0px", "left": "0px", "right": "0px"});\n
+        $("div.content").css({"top": "6em"});\n
+        break;\n
+    }\n
   }\n
   $("a[name=\'document_title\']").html(getObjectPropertyValue("getTitle"));\n
   $("input#upload").click(function(event){\n
@@ -214,6 +235,12 @@ $(document).ready(function(){\n
     width: 346,\n
     modal: true,\n
  });\n
+ $("div#preference_dialog").dialog({\n
+    autoOpen: false,\n
+    height: 140,\n
+    width: 330,\n
+    modal: true,\n
+ });\n
  $("p#more_properties")\n
     .click(function(){\n
       $("div#more_property").show();\n
@@ -228,19 +255,24 @@ $(document).ready(function(){\n
                                            .css("width", "35%");\n
       $("div#more_property input").css("width", "47%");\n
       $("p#more_properties").hide();\n
- });\n
+    });\n
  $("p#hide_properties")\n
     .click(function(){\n
-    $("div#more_property").hide();\n
-    $("p#more_properties").show();\n
-    $("p#hide_properties").hide();\n
-    $("div#edit_document fieldset input").css("width", "95%")\n
-                                         .css("margin-top", "14px");\n
-    $("div#edit_document fieldset").animate({"height": "69px"}, "slow");\n
-    $("div.ui-dialog").animate({"height": "148px"}, "slow");\n
-    $("div#edit_document").animate({"height": "78px"}, "slow");\n
- })\n
- $("button.ui-button, span.ui-icon").click(function(){$("p#hide_properties").click()})\n
+      $("div#more_property").hide();\n
+      $("p#more_properties").show();\n
+      $("p#hide_properties").hide();\n
+      $("div#edit_document fieldset input").css("width", "95%")\n
+                                           .css("margin-top", "14px");\n
+      $("div#edit_document fieldset").animate({"height": "69px"}, "slow");\n
+      $("div.ui-dialog").animate({"height": "148px"}, "slow");\n
+      $("div#edit_document").animate({"height": "78px"}, "slow");\n
+    });\n
+  $("a#settings")\n
+    .click(function(event){\n
+      event.preventDefault();\n
+      $("div#preference_dialog").dialog("open");\n
+    });\n
+ $("button.ui-button, span.ui-icon").click(function(){$("p#hide_properties").click()});\n
  $("a[name=\'document_title\']")\n
     .click(function(){\n
         $("div#more_property").hide();\n
@@ -256,7 +288,7 @@ $(document).ready(function(){\n
         $("input#sort_index.sort_index").attr("value", getObjectPropertyValue("getIntIndex"));\n
         $("#edit_document").dialog("open");     \n
     });\n
- $("a#settings, a#help").click(function(event){\n
+ $("a#help").click(function(event){\n
    event.preventDefault();\n
    showNotImplementedMessage("a#right_message");\n
  });\n
